# virtlet

./: .codeclimate.yml  .gitignore  .travis.yml  404.html  ACKNOWLEDGE.md  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.logger  Makefile  Makefile.am  OWNERS  README.md  RELEASE.md  autogen.sh  configure.ac  cpplint.test  cri-tools.patch  dockerfilelint.test  glide.yaml  gofmt.test  index.html  libvirt-xml-go.patch  mkdocs.yml  qemu-build.conf  search.html  sitemap.xml  source_hash  test.sh  vendor.conf  virtlet_start.sh
.circleci/: config.yml
.github/: stale.yml
101/architecture/: index.html
101/cloud-init/: index.html
101/creating-and-managing-pods/: index.html
101/network/: index.html
101/provision-virtlet/: index.html
101/rolling-out-updates/: index.html
101/troubleshooting/: index.html
101/volumes/: index.html
101/workshop-setup/: index.html
apparmor/: README.rst  libvirtd
cmd/criproxy/: criproxy.go
cmd/dhcpserver/: dhcp-server.go
cmd/dockershim/: dockershim.go
cmd/fake-create-container/: fake-create-container.go
cmd/fake-image-pull/: fake-image-pull.go
cmd/flexvolume/: libvirt_driver.go
cmd/flexvolume_driver/: flexvolume_driver.go
cmd/inner_vmwrapper/: inner_vmwrapper.go
cmd/longevity/: longevity.go
cmd/virtlet/: pdeathsig_linux.go  pdeathsig_unsupported.go  virtlet.go
cmd/virtlet_log/: virtlet_log.go
cmd/virtletctl/: virtletctl.go
cmd/vmwrapper/: vmwrapper.go
contrib/cirros-patches/: buildroot.diff  cirros-repo.diff
contrib/cluster/: README.md  lxc_utils.sh  setup_base_container.sh
contrib/deploy/: README.md  image-server.yaml  image-service.yaml  virsh.sh  virtlet-ds.yaml  virtletify-dind-node.sh
contrib/docker-compose/: docker-compose.yml
contrib/docker-compose-test/: docker-compose.yml
deploy/: README.md  demo.sh  images.yaml  real-cluster.md  virtlet-ds-dev.yaml  virtlet-ds.yaml  virtlet-log-ds.yaml  virtletify-dind-node.sh
deploy/apparmor/: README.md  libvirtd  virtlet  vms
deploy/data/: virtlet-ds.yaml
docs/: README.md  architecture.md  bootstrap.dot  cloud-init-data-generation.md  config.md  configmap-as-files.md  contributing.md  cri-tools.md  criproxy.dot  criproxy.md  diagnostics.md  environment-variables.md  getting-started.md  image-name-translation.md  images.md  index.md  mkdocs.yml  multiple-interfaces.md  networking.md  resource_managment.md  running-local-environment.md  sync-pod-workflow.md  update-notes.md  virtlet.dot  vmpod-lifecycle.md  volumes.md  writing-files-to-rootfs.md
examples/: README.md  cirros-vm-deployment.yaml  cirros-vm-persistent-rootfs-local.yaml  cirros-vm-persistent-rootfs-rbd.yaml  cirros-vm-persistent-rootfs.yaml  cirros-vm-raw-device.yaml  cirros-vm-rbd-pv-volume.yaml.tmpl  cirros-vm-rbd-volume.yaml.tmpl  cirros-vm-volume-mount.yaml  cirros-vm-with-additional-annotations.yaml  cirros-vm.yaml  debian-vm.yaml  demo.sh  fedora-vm-with-testuser.yaml  fedora-vm.yaml  image-server.yaml  image-service.yaml  k8s.yaml  ubuntu-multi-cni.yaml  ubuntu-vm-hostpath-pv.yaml  ubuntu-vm-local-block-pv.yaml  ubuntu-vm-nfs-pv.yaml  ubuntu-vm-rbd-block-pv.yaml  ubuntu-vm-with-libvirt-cpusetting.yaml  ubuntu-vm-with-nesed-virtualization.yaml  ubuntu-vm-with-nested-virtualization.yaml  ubuntu-vm-with-testuser.yaml  ubuntu-vm-with-volume.yaml  ubuntu-vm.yaml  util.sh  virsh.sh  virt-cirros.yaml  virt-fedora.yaml  vmkey  vmkey.pub  vmssh.sh
hooks/: pre_build
image_skel/: cleanup.py  libvirt.sh  prepare-node.sh  rsyncd.sh  start.sh  vmwrapper-pre-qemu.sh
images/: Dockerfile.build  Dockerfile.build-base  Dockerfile.virtlet  Dockerfile.virtlet-base
old-docs/: README.md  cloud-init-data-generation.md  environment-variables.md  multiple-interfaces.md  resource_managment.md  sync-pod-workflow.md  virtlet.dot  virtletctl.md  vmpod-lifecycle.md  writing-files-to-rootfs.md
pkg/libvirttools/: Makefile.am  TestCloudInitGenerator__9pfs_volume.out.yaml  TestCloudInitGenerator__injecting_mount_and_symlink_scripts_into_user_data_script.out.yaml  TestCloudInitGenerator__injecting_mount_script_into_user_data_script.out.yaml  TestCloudInitGenerator__metadata_for_configdrive.out.yaml  TestCloudInitGenerator__plain_pod.out.yaml  TestCloudInitGenerator__pod_with_env_variables.out.yaml  TestCloudInitGenerator__pod_with_env_variables_and_user_data.out.yaml  TestCloudInitGenerator__pod_with_multiple_network_interfaces.out.yaml  TestCloudInitGenerator__pod_with_multiple_network_interfaces_-_configdrive.out.yaml  TestCloudInitGenerator__pod_with_network_config.out.yaml  TestCloudInitGenerator__pod_with_network_config_-_configdrive.out.yaml  TestCloudInitGenerator__pod_with_persistent_rootfs.out.yaml  TestCloudInitGenerator__pod_with_ssh_keys.out.yaml  TestCloudInitGenerator__pod_with_ssh_keys_and_meta-data_override.out.yaml  TestCloudInitGenerator__pod_with_user_data.out.yaml  TestCloudInitGenerator__pod_with_user_data_script.out.yaml  TestCloudInitGenerator__pod_with_volume_devices.out.yaml  TestCloudInitGenerator__pod_with_volume_devices_and_volumes_to_mount.out.yaml  TestCloudInitGenerator__pod_with_volumes_to_mount.out.yaml  TestContainerLifecycle.json  TestContainerLifecycle.out.json  TestContainerLifecycle.out.yaml  TestDomainCleanup.json  TestDomainCleanup.out.json  TestDomainCleanup.out.yaml  TestDomainDefinitions__9pfs_volume.out.yaml  TestDomainDefinitions__ceph_flexvolume.json  TestDomainDefinitions__ceph_flexvolume.out.json  TestDomainDefinitions__ceph_flexvolume.out.yaml  TestDomainDefinitions__cloud-init.json  TestDomainDefinitions__cloud-init.out.json  TestDomainDefinitions__cloud-init.out.yaml  TestDomainDefinitions__cloud-init_with_user_data.json  TestDomainDefinitions__cloud-init_with_user_data.out.json  TestDomainDefinitions__cloud-init_with_user_data.out.yaml  TestDomainDefinitions__file_injection.out.yaml  TestDomainDefinitions__file_injection_on_persistent_rootfs.out.yaml  TestDomainDefinitions__persistent_rootfs.out.yaml  TestDomainDefinitions__plain_domain.json  (+110 more)
pkg/libvirttools/tests/: test_image.c  test_virtualization.c
search/: search_index.json
(+610 files in other folders)
